# imperal-seo

./: api_client.py  api_seranking.py  api_wordpress.py  app.py  handlers_ai_extra.py  handlers_ai_write.py  handlers_content.py  handlers_docs.py  handlers_keywords.py  handlers_nav.py  handlers_publish.py  handlers_seo.py  imperal.json  main.py  manifest.json  panels_article_info.py  panels_docs.py  panels_editor.py  panels_editor_newsletter.py  panels_right.py  panels_settings_view.py  panels_side.py  panels_workspace.py  params.py  pyproject.toml  skeleton.py  wpb_app.py
tests/: test_plan.py  test_publish.py  test_seo.py
