[project]
name = "wp-blogger"
version = "1.2.2"
description = "WP Blogger — AI-powered WordPress content creation: keyword research, rankings, article writing and one-click publishing"
requires-python = ">=3.10"
dependencies = ["imperal-sdk>=3.5.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "app", "params",
    "api_seranking", "api_wordpress",
    "handlers_nav", "handlers_content", "handlers_seo", "handlers_publish", "handlers_docs",
    "panels_side", "panels_workspace", "panels_editor", "panels_docs",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
